--- a/module4_Soln/index.html
+++ b/module4_Soln/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter Completed</h1>
+  
+  <h4> Open the console to verify the answer <h4>
 </body>
 </html>
